--- a/ejemplo_dos/templates/ejemplo_dos/base.html
+++ b/ejemplo_dos/templates/ejemplo_dos/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Blog Home - Start Bootstrap Template</title>
+        <title>DSTRAVEL</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -21,22 +21,28 @@
                     <img src="{{user.avatar.imagen.url}}" height="64">
                       Hola, {{user.first_name}} |
                     {% endif %} 
-                    Start Bootstrap
+                    DSTRAVEL
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-index' %}">Home</a></li>
+                        <!--<li class="nav-item"><a class="nav-link" href="#!">About</a></li>-->
                         <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-mensajes-crear' %}">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                         
-                        <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-signup' %}">Registrarse</a></li>
+
                         {% if user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-listar' %}">Admin Blog</a></li>
+                            {% if user.is_superuser %}
+                                <li class="nav-item"><a class="nav-link" href="{% url 'vuelocrear' %}">Crear Vuelos</a></li>
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'vuelolistar' %}">Vuelos</a></li>
+                            {% else %}
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'vuelolistar' %}">Vuelos Disponibles</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-listar' %}">Admin Blog</a></li>-->
+                            {% endif %}
                             <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-logout' %}">Salir</a></li>
                         {% else %}
                             <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-login' %}">Ingresar</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'ejemplo-dos-signup' %}">Registrarse</a></li>
                         {% endif %}
                         
                     </ul>
@@ -44,19 +50,11 @@
             </div>
         </nav>
         <!-- Page header with logo and tagline-->
-        <header class="py-5 bg-light border-bottom mb-4">
-            <div class="container">
-                <div class="text-center my-5">
-                    <h1 class="fw-bolder">Welcome to Blog Home!</h1>
-                    <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
-                </div>
-            </div>
-        </header>
         <!-- Page content-->
         {% block contenido %} {% endblock %}
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; DS2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
