--- a/ejemplo_dos/templates/ejemplo_dos/vuelo_comprar.html
+++ b/ejemplo_dos/templates/ejemplo_dos/vuelo_comprar.html
@@ -1,179 +1,9 @@
 {% extends 'ejemplo_dos/base.html' %}
 {% block contenido %}
 <form enctype="multipart/form-data" method="POST">
-<div class="container mt-5 p-3 rounded cart">
-        <div class="row no-gutters">
-            <div class="col-md-8">
-                <div class="product-details mr-2">
-                    <div class="d-flex flex-row align-items-center"><i class="fa fa-long-arrow-left"></i><span class="ml-2">Para comprar tu vuelo completa los siguientes datos</span></div>
-                    <hr>
-                    <!--Grid row-->
-                    <div class="row">
-                        <!--Grid column-->
-                        <div class="col-md-8 mb-4">
-                            <!--Card-->
-                            <div class="card p-4">
-                                <!--Grid row-->
-                                <div class="row mb-3">
-                                    <!--Grid column-->
-                                    <div class="col-md-6 mb-2">
-                                        <!--firstName-->
-                                        <div class="form-outline">
-                                            <input type="text" id="typeText" class="form-control" placeholder="Pepe" aria-label="Pepe" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Nombre/s</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-md-6 mb-2">
-                                        <!--lastName-->
-                                        <div class="form-outline">
-                                            <input type="text" id="typeText" class="form-control" placeholder="Argento" aria-label="Argento" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Apellido/s</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-                                </div>
-                                <!--Grid row-->
-
-                                <!--Username
-                                <div class="input-group mb-4">
-                                    <span class="input-group-text" id="basic-addon1">opc</span>
-                                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
-                                </div>-->
-
-                                <!--Dni tit y Telefono-->
-                                <!--Grid row-->
-                                <div class="row mb-3">
-                                    <!--Grid column-->
-                                    <div class="col-md-6 mb-2">
-                                        <!--firstName-->
-                                        <div class="form-outline">
-                                            <input type="text" id="typeText" class="form-control" placeholder="11222333" aria-label="11222333" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">DNI Pasajero</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-md-6 mb-2">
-                                        <!--lastName-->
-                                        <div class="form-outline">
-                                            <input type="text" id="typeText" class="form-control" placeholder="xx/xx/xxxx" aria-label="xx/xx/xxxx" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Fecha de Nac.</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-                                </div>
-
-                                <!--email-->
-                                <p class="mb-0">
-                                </p>
-                                <div class="form-outline mb-4">
-                                     <input type="email" class="form-control" placeholder="tuemail@ejemplo.com" aria-label="tuemail@ejemplo.com" aria-describedby="basic-addon1" />
-                                    <label class="form-label" for="typeText">Email</label>
-                                </div>
-
-                                <!--Grid row-->
-                                <div class="row">
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline mb-4">
-                                    <input type="email" class="form-control" placeholder="123" aria-label="123" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Calle</label>
-                                </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline mb-4">
-                                    <input type="email" class="form-control" placeholder="321" aria-label="321" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Nro</label>
-                                </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline">
-                                            <input type="text" class="form-control" placeholder="Ensenada" aria-label="321" aria-describedby="Ensenada" />
-                                            <label class="form-label" for="typeText">Ciudad</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-                                </div>
-
-                                <!--Grid row-->
-                                <div class="row">
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline mb-4">
-                                    <input type="email" class="form-control" placeholder="Buenos Aires" aria-label="Buenos Aires" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Provincia</label>
-                                </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline mb-4">
-                                    <input type="email" class="form-control" placeholder="Argentina" aria-label="Argentina" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Pais</label>
-                                </div>
-                                    </div>
-                                    <!--Grid column-->
-
-                                    <!--Grid column-->
-                                    <div class="col-lg-4 col-md-12 mb-4">
-                                        <p class="mb-0">
-                                        </p>
-                                        <div class="form-outline">
-                                            <input type="text" class="form-control" placeholder="1122334455" aria-label="1122334455" aria-describedby="basic-addon1" />
-                                            <label class="form-label" for="typeText">Telefono</label>
-                                        </div>
-                                    </div>
-                                    <!--Grid column-->
-                                </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="payment-info">
-                    <div class="d-flex justify-content-between align-items-center"><span>Detalle del Pago</span></div><span class="type d-block mt-3 mb-1">Medio de Pago</span><label class="radio"> <input type="radio" name="card" value="payment" checked> <span> Credito</span> </label>
-
-<label class="radio"> <input type="radio" name="card" value="payment"> <span> Debito</span> </label>
-
-<label class="radio"> <input type="radio" name="card" value="payment"> <span> PagoFacil</span></label>
-
-
-<label class="radio"> <input type="radio" name="card" value="payment"> <span> RapiPago</span> </label>
-                    <div><label class="credit-card-label">Nombre del titular</label><input type="text" class="form-control credit-inputs" placeholder="Name"></div>
-                    <div><label class="credit-card-label">Numero de tarjeta</label><input type="text" class="form-control credit-inputs" placeholder="0000 0000 0000 0000"></div>
-                    <div><label class="credit-card-label">DNI del titular</label><input type="text" class="form-control credit-inputs" placeholder="11222333"></div>
-                    <div class="row">
-                        <div class="col-md-6"><label class="credit-card-label">Vencimiento</label><input type="text" class="form-control credit-inputs" placeholder="12/24"></div>
-                        <div class="col-md-6"><label class="credit-card-label">CVV</label><input type="text" class="form-control credit-inputs" placeholder="342"></div>
-                    </div>
-                    <hr class="line">
-                    <div class="d-flex justify-content-between information"><span>Subtotal</span><span>$3000.00</span></div>
-                    <div class="d-flex justify-content-between information"><span>Shipping</span><span>$20.00</span></div>
-                    <div class="d-flex justify-content-between information"><span>Total(Incl. taxes)</span><span>$3020.00</span></div>
-                     {% csrf_token %}
-<!--                    {{form.as_p}}-->
-                    <button class="btn btn-primary btn-block d-flex justify-content-between mt-3" type="submit" ><span></span><span>Pagar<i class="fa fa-long-arrow-right ml-1"></i></span></button></div>
-            </div>
-        </div>
-    </div>
+    <h2> Compra tu vuelo </h2>
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Confirmar">
 </form>
 {% endblock %}
