--- a/ejemplo_dos/templates/ejemplo_dos/index.html
+++ b/ejemplo_dos/templates/ejemplo_dos/index.html
@@ -11,6 +11,24 @@
             </div>
         </header>
     <div class="row">
+        <div class="col-lg-4">
+            <!-- Search widget-->
+            <div class="card mb-4">
+                <div class="card-header">Busca tu proximo destino!</div>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input class="form-control" type="text" placeholder="Ciudad, Estado, Pais..." aria-label="Enter search term..." aria-describedby="button-search" />
+                        <button class="btn btn-primary" id="button-search" type="button">Buscar</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Side widget-->
+            <div class="card mb-4">
+                <div class="card-header">Atencion!!</div>
+                <div class="card-body">Este es un anuncio de oferta. Este es un anuncio de oferta. Este es un anuncio de oferta. Este es un anuncio de oferta. </div>
+            </div>
+        </div>
         <!-- Blog entries-->
         <div class="col-lg-8">
             {% if vuelos %}
@@ -92,19 +110,7 @@
                             </div>
                             {% endif %}
                         </div>
-                        <div class="card mb-4">
-                            {% if vuelos.5 %}
-<!--                            <a href="#!"><img class="card-img-top" src="{{vuelos.5.imagen.url}}" alt="..." /></a>-->
-                            <div class="small text-muted">Precio: {{vuelos.5.precio}} $ARS</div>
-                                    <h2 class="card-title">{{vuelos.5.destinoIda}}</h2>
-                                    <h2 class="card-title">{{vuelos.5.destinoVuelta}}</h2>
-                                    <p class="card-text">{{vuelos.5.fechaPartida}}</p>
-                                    <p class="card-text">{{vuelos.5.fechaArrivo}}</p>
 
-                                        <a class="btn btn-primary" href="{% url 'vuelodetalle' vuelos.5.id %}">Leer Mas →</a>
-                            </div>
-                            {% endif %}
-                        </div>
                     </div>
                 </div>
             {% else %}
@@ -112,45 +118,7 @@
             {% endif %}
             </div>
         <!-- Side widgets-->
-        <div class="col-lg-4">
-            <!-- Search widget-->
-            <div class="card mb-4">
-                <div class="card-header">Search</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                    </div>
-                </div>
-            </div>
-            <!-- Categories widget-->
-            <div class="card mb-4">
-                <div class="card-header">Categories</div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">Web Design</a></li>
-                                <li><a href="#!">HTML</a></li>
-                                <li><a href="#!">Freebies</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled mb-0">
-                                <li><a href="#!">JavaScript</a></li>
-                                <li><a href="#!">CSS</a></li>
-                                <li><a href="#!">Tutorials</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Side widget-->
-            <div class="card mb-4">
-                <div class="card-header">Side Widget</div>
-                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
-            </div>
-        </div>
+
     </div>
 </div>
 {% endblock %}
