--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_form.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_form.html
@@ -1,5 +1,6 @@
 {% extends 'ejemplo_dos/base.html' %}
 {% block contenido %}
+<h3>Envianos tu consulta!</h3>
 <form method="POST">
     {% csrf_token %}
     {{form.as_p}}
