--- a/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/mensaje_list.html
@@ -1,6 +1,10 @@
 {% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
+<div>
+    <a class="fcc-btn" href="{% url 'ejemplo-dos-listar' %}"> << Volver </a>
+</div>
+<h3>Buzon de entrada</h3>
 <ul>
 {% for mensaje in object_list %}
     <li>
