--- a/ejemplo_dos/templates/ejemplo_dos/post_list.html
+++ b/ejemplo_dos/templates/ejemplo_dos/post_list.html
@@ -1,24 +1,21 @@
 {% extends 'ejemplo_dos/base.html' %}
 
 {% block contenido %}
-{% if user.is_authenticated %}
-    <a href="{% url 'ejemplo-dos-crear' %}">Crear Post</a>
-    {% if user.avatar.imagen %}
-        <a href="{% url 'ejemplo-dos-avatars-actualizar' user.avatar.id %}">Actualizar Avatar</a>
-    {% endif %}
-    <a href="{% url 'ejemplo-dos-users-actualizar' user.id %}">Actualizar Profile</a>
-    <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Mensajes</a>
-{% endif %}
 <ul>
-{% for post in object_list %}
-    <li>
-        {{post.publicado_el}} - - {{post.titulo}} 
-        {% if user.is_superuser %}
-            <a href="{% url 'ejemplo-dos-borrar' post.id %}">Borrar</a>
-            <a href="{% url 'ejemplo-dos-actualizar' post.id %}">Actualizar</a>
-        {% endif %}
-        <a href="{% url 'ejemplo-dos-detalle' post.id %}">Ver</a>
-    </li>
-{% endfor %}
-</ul>
+
+{% if user.is_authenticated %}
+    <li><div>
+        <a href="{% url 'ejemplo-dos-users-actualizar' user.id %}">Actualizar Perfil</a>
+    </div></li>
+    {% if user.is_superuser %}
+     <li><div>
+        <a href="{% url 'ejemplo-dos-mensajes-listar' %}">Mensajes Recibidos</a>
+    </div></li>
+    <li><div>
+        <a href="{% url 'vuelocrear' %}">Crear Vuelos</a>
+    </div></li>
+    {% endif %}
+{% endif %}
+    </ul>
+
 {% endblock %}
