--- a/ejemplo_dos/templates/ejemplo_dos/vuelo_comprar.html
+++ b/ejemplo_dos/templates/ejemplo_dos/vuelo_comprar.html
@@ -1,5 +1,8 @@
 {% extends 'ejemplo_dos/base.html' %}
 {% block contenido %}
+ <div>
+     <a class="fcc-btn" href="{% url 'ejemplo-dos-index' %}"> << Volver al Inicio </a>
+ </div>
 <form enctype="multipart/form-data" method="POST">
     <h2> Compra tu vuelo </h2>
     {% csrf_token %}
